WIP - sealed works for anon responses, but not yet refs